# DashboardIntergrationII

./: README.md  data_sortiert.py  interfaceWebsite.py  main.py  pyproject.toml  requirements.txt  training.db
CSV_analyse/: __init__.py  power_curve.py  zonen_einteilung.py
GPX_Integration/: __init__.py
GPX_Integration/database/: __init__.py  models.py  training_db.py
GPX_Integration/garmin/: garmin_auth.py  garmin_import.py
GPX_Integration/logic/: __init__.py  gpx_speichern.py  hoehenprofil.py  hoehenprofil_interaktiv.py  plots.py  statistik_zusammenfassung.py  statistiken.py  zonen.py
GPX_Integration/map/: __init__.py  karten_erstellung.py
GPX_Integration/parsers/: __init__.py  fit_parser.py  gpx_parser.py  tcx_parser.py
Personen/: __init__.py  daten_einlesen.py  klasse_ekgdata.py  klasse_person.py
Personen_Verwaltung/: __init__.py  benutzer_verwaltung.py
data/: .ui_settings.json  person_db.json  ui_settings.json
data/data_sortiert/: 01_Ruhe_short.txt  ekg_data_20_1.txt  ekg_data_20_2.txt  ekg_data_23_1.txt  ekg_data_23_2.txt
data/temp/: fiskebackskill-skafto-gullmarsfjorden.tcx  malaga-rincon-torre-del-mar-zafarraya-alfarnate-colmenar-pue.gpx  mount-everest-basecamp-trek.tcx  munsingen-marzili-bern.gpx  track_6-6663984305.gpx
