[project]
name = "DashboardIntergrationII"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "LOGit13",email = "ol6078@mci4me.at"},
]
dependencies = ["streamlit>=1.58.0", "numpy>=2.5.0", "pandas>=2.3.3", "matplotlib>=3.11.0", "scipy>=1.18.0", "tinydb>=4.8.2", "gpxpy>=1.6.2", "folium>=0.20.0", "neurokit2>=0.2.13", "fitparse>=1.2.0", "fastkml>=1.4.0", "streamlit-option-menu>=0.4.0", "plotly>=6.8.0"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
